# mikrotik-zed

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  extension.toml  extension.wasm  llms.txt  test.rsc
.agents/skills/: commands-extraction.md  development-workflow.md  language-server.md  routeros-reference.md  tree-sitter-grammar.md  zed-extension-dev.md
data/: commands.toml
extension/: Cargo.toml
extension/src/: lib.rs
grammars/rsc/: Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter.json
grammars/rsc/src/: grammar.json  node-types.json  parser.c
grammars/rsc/test/: example.rsc  simple.rsc
grammars/rsc/test/corpus/: arrays.txt  basics.txt  blocks.txt  command_substitution.txt  global_commands.txt  literals.txt  menu_commands.txt  named_params.txt  operators_nav.txt  separators.txt  strings.txt  subexpressions.txt  variables.txt
languages/rsc/: brackets.scm  config.toml  highlights.scm  indents.scm  injections.scm  outline.scm
lsp/: Cargo.toml
lsp/src/: completion.rs  hover.rs  main.rs  menus.rs
scripts/: clean_tests.py  debug_extract.py  extract_commands.py  generate_tests.py  regenerate_tests.py
src/: lib.rs  ls.mjs
tests/: test_extract_commands.py
