[package]
name = "mikrotik-zed"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MikroTik RouterOS Script language server for Zed"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
